# Neural-Network-Cars

./: .env  .env.example  .gitignore  AGENTS.md  README.md  Spec.md  competition_main.py  conftest.py  design-doc.md  judge_demo.py  main.py  mapGen.py  nnCarGame.py  openapi.json  profile.json  proposal.md  pyproject.toml  records.json  replay.py  settings.json  spec.md
.claude/: launch.json
GA/: __init__.py  fitness.py  genetic.py
backend/: assets.py  car.py  genetic.py  serialization.py  settings.py  track_generator.py  training_session.py
configs/: beginner_mix.json  fitness_presets.json
docs/: api-spec.md  beginner_mix.md  classroom-deployment.md  current-replay-leaderboard-ui.md  design-doc.md  fitness-calculation.md  fitness-parameter-editor-design.md  nn-gd-marp.md
frontend/: app.py  config_store.py  scenes.py
game_engine/: __init__.py
maps/: kaggle_easy.json  kaggle_final.json  kaggle_hard.json
notebooks/: run_experiments.ipynb
pipeline/: __init__.py  config.py  export.py  fitness.py  nn.py  paths.py  render.py  replay.py  run_experiment.py  simulator.py  storage.py  track.py  training.py  tune.py  visualize.py
scripts/: make_tune_base.py
server/: __init__.py  app.py  competition.db  competition_config.py  competition_maps.py  data.json  evaluation_worker.py  evaluator.py  events.py  mock_data.py  models.py  official_maps.py  replay_queue.py  schemas.py  seed_demo_players.py  storage.py
shared/: __init__.py  contracts.py
tests/: test_auto_breed.py  test_beginner_mix.py  test_build_strategy.py  test_car.py  test_car_metrics.py  test_tune.py  (+27 more)
(+182 files in other folders)
